--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
